# monayy

./: .gitignore
.github/workflows/: validate-pr.yml
api/: main.py  pyproject.toml
api/src/: conftest.py  message_parser.py  test.html  test_message_parser.py  transaction_processor.py  transactions.py
api/src/account/: datasources.py  test_datasources.py  types.py  users.py
api/src/api/: account.py  incoming.py
api/src/db/: connection.py  schema.py  test_schema.py
api/src/incoming/: incoming_messages.py  test_incoming_messages.py
api/src/test_util/: __init__.py
web/: package.json
